--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="index.html">Inicio</a></li>
             <li class="divider"></li>
-            <li><a href="segunda.html">Quienes somos</a></li>
+            <li><a href="quienes_somos.html">Quienes somos</a></li>
             <li class="divider"></li>
-            <li><a href="tercera.html">Estructura </br> de la empresa</a></li>
+            <li><a href="estructura_empresa.html">Estructura </br> de la empresa</a></li>
             <li class="divider"></li>
-            <li><a href="cuarta.html">desarrollo </br> comunitario</a></li>
+            <li><a href="desarrollocomunitario.html">desarrollo </br> comunitario</a></li>
         </ul>
 
         <nav class="navbar-fixed-top transparent" style="box-shadow: none!important;">
