--- a/desarrollocomunitario.html
+++ b/desarrollocomunitario.html
@@ -36,7 +36,7 @@
 
         <nav class="navbar-fixed-top" style="background-color: #97CF28 !important;">
             <div class="nav-wrapper transparent">
-                <a href="#!" class="brand-logo center">Logo</a>
+                <a href="#!" class="brand-logo center">fundaedusa</a>
                 <ul class="left">
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons right" style="font-size: 40px;">menu</i></a></li>
                 </ul>
@@ -65,9 +65,9 @@
     </div>
 
     <div class="row" style="padding-top: 2%;">
-        <div class="col l6 m6 s6">
-            <h1 class="center-align flow-text"><b>VALORES</b></h1>
-            <p class="flow-text left-align" style=" font-size: 17px; font-weight: 300; letter-spacing: 0.5px;">
+        <div class="col l6 m6 s6 center-align">
+            <h1 class="flow-text"><b>VALORES</b></h1>
+            <p class="flow-text" style=" font-size: 20px; font-weight: 300; letter-spacing: 0.5px;">
                 - Actitud de servicio</br> - Respeto</br> - Seguridad</br> - Trabajo en equipo</br> - Ética</br> - Transparencia</br> - Unidad</br> - Participación</br> - Excelencia</br> - Compromiso
 
             </p>
@@ -83,16 +83,16 @@
     <footer class="page-footer " style="background-color: #97CF28 !important;">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col l6 s12 center-align">
                     <h5 class="white-text">Contacto</h5>
                     <p class="grey-text text-lighten-4">Calle 18 cra 14ª n 14 16 local 2</p>
                     <p class="grey-text text-lighten-4">Cel: 3176434612 - 4308392</p>
                     <p class="grey-text text-lighten-4">E-mail: fundacionedusa@gmail.com</p>
                     <p class="grey-text text-lighten-4">Santa Marta - Colombia</p>
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l4 offset-l2 s12 center-align">
                     <h5 class="white-text">Enlaces</h5>
-                    <ul>
+                    <ul class="center-align">
                         <li><a class="grey-text text-lighten-3" href="index.html">Inicio</a></li>
                         <li><a class="grey-text text-lighten-3" href="quienes_somos.html">Quienes somos</a></li>
                         <li><a class="grey-text text-lighten-3" href="estructura_empresa.html">Estructura de la empresa</a></li>
