--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <nav class="navbar-fixed-top transparent" style="box-shadow: none!important;">
             <div class="nav-wrapper transparent">
-                <a href="#!" class="brand-logo center">Logo</a>
+                <a href="#!" class="brand-logo center">fundaedusa</a>
                 <ul class="left">
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons right" style="font-size: 40px;">menu</i></a></li>
                 </ul>
@@ -154,16 +154,16 @@
         <footer class="page-footer " style="background-color: #97CF28 !important;">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12">
+                    <div class="col l6 s12 center-align">
                         <h5 class="white-text">Contacto</h5>
                         <p class="grey-text text-lighten-4">Calle 18 cra 14ª n 14 16 local 2</p>
                         <p class="grey-text text-lighten-4">Cel: 3176434612 - 4308392</p>
                         <p class="grey-text text-lighten-4">E-mail: fundacionedusa@gmail.com</p>
                         <p class="grey-text text-lighten-4">Santa Marta - Colombia</p>
                     </div>
-                    <div class="col l4 offset-l2 s12">
+                    <div class="col l4 offset-l2 s12 center-align">
                         <h5 class="white-text">Enlaces</h5>
-                        <ul>
+                        <ul class="center-align">
                             <li><a class="grey-text text-lighten-3" href="index.html">Inicio</a></li>
                             <li><a class="grey-text text-lighten-3" href="quienes_somos.html">Quienes somos</a></li>
                             <li><a class="grey-text text-lighten-3" href="estructura_empresa.html">Estructura de la empresa</a></li>
