--- a/estructura_empresa.html
+++ b/estructura_empresa.html
@@ -32,11 +32,12 @@
             <li><a href="estructura_empresa.html">Estructura </br> de la empresa</a></li>
             <li class="divider"></li>
             <li><a href="desarrollocomunitario.html">desarrollo </br> comunitario</a></li>
+            <li><a href="correo">correo</br>institucional</a></li>
         </ul>
 
         <nav class="navbar-fixed-top" style="background-color: #97CF28 !important;">
             <div class="nav-wrapper transparent">
-                <a href="#!" class="brand-logo center">fundaedusa</a>
+                <a style="width: 100%; height: 0%;" href="#!" class="brand-logo center">FUNDACIÓN PARA EL DESARROLLO DE LA EDUCACIÓN Y LA SALUD "EDUSA"</a>
                 <ul class="left">
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons right" style="font-size: 40px;">menu</i></a></li>
                 </ul>
@@ -87,7 +88,7 @@
                         <li><a class="grey-text text-lighten-3" href="quienes_somos.html">Quienes somos</a></li>
                         <li><a class="grey-text text-lighten-3" href="estructura_empresa.html">Estructura de la empresa</a></li>
                         <li><a class="grey-text text-lighten-3" href="desarrollocomunitario.html">Desarrollo comunitario/valores</a></li>
-                        <li id="correo"><a class="grey-text text-lighten-3">Correo institucional</a></li>
+                        <li id="correo"><a class="grey-text text-lighten-3" href="correo">Correo institucional</a></li>
                     </ul>
                 </div>
             </div>
