--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
             <li><a href="estructura_empresa.html">Estructura </br> de la empresa</a></li>
             <li class="divider"></li>
             <li><a href="desarrollocomunitario.html">desarrollo </br> comunitario</a></li>
+            <li class="divider"></li>
+            <li><a href="galeria.html">galeria</a></li>
+            <li class="divider"></li>
             <li><a href="correo">correo</br>institucional</a></li>
         </ul>
 
         <nav class="navbar-fixed-top transparent" style="box-shadow: none!important;">
             <div class="nav-wrapper transparent">
-                <a style="width: 100%; height: 0%;" href="#!" class="brand-logo center">FUNDACIÓN PARA EL DESARROLLO DE LA EDUCACIÓN Y LA SALUD "EDUSA"</a>
+                <a style="width: 100%; height: 0%;" href="index.html" class="brand-logo center">FUNDACIÓN PARA EL DESARROLLO DE LA EDUCACIÓN Y LA SALUD "EDUSA"</a>
                 <ul class="left">
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons right" style="font-size: 40px;">menu</i></a></li>
                 </ul>
@@ -166,6 +169,7 @@
                         <h5 class="white-text">Enlaces</h5>
                         <ul class="center-align">
                             <li><a class="grey-text text-lighten-3" href="index.html">Inicio</a></li>
+                            <li id="correo"><a class="grey-text text-lighten-3" href="galeria.html">Galeria</a></li>
                             <li><a class="grey-text text-lighten-3" href="quienes_somos.html">Quienes somos</a></li>
                             <li><a class="grey-text text-lighten-3" href="estructura_empresa.html">Estructura de la empresa</a></li>
                             <li><a class="grey-text text-lighten-3" href="desarrollocomunitario.html">Desarrollo comunitario/valores</a></li>
